--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines":{
+    "node":"14.18.1",
+    "npm" : "6.14.15"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
